# EcoGrid-AuditPredict-

./: .env  .env.example  CHAT_SYSTEM_COMPLETE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_OLD.md  FRONTEND_UPGRADE_COMPLETE.md  FULLSTACK_README.md  NODEJS_INSTALL.md  PHASE_1_2_COMPLETE.md  PHASE_1_2_ULTRA_COMPLETE.md  REACT_MIGRATION_COMPLETE.md  README.md  TEST_REPORT.md  check_data.py  ecogrid.db  generate_realistic_data.py  generate_test_data.py  pyproject.toml  quick_test.py  requirements.txt  run_demo.py  test_ai_fix.py  test_ai_prediction.py  test_api.py  test_system_complete.py
backend/: ecogrid.db  main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  audit.py  dashboard.py  forecast.py  optimization.py
backend/app/core/: config.py
backend/app/data/: taipower_client.py  weather_client.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  power.py
backend/app/schemas/: __init__.py  power.py
backend/app/services/: __init__.py  ai_service.py  data_populator.py  enhanced_etl.py  llm_service.py  llm_service.py.corrupt  llm_service_query.txt  optimization_service.py  simple_etl.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.js  main.jsx  style.css
frontend/src/api/: endpoints.js  index.js
frontend/src/components/: ChatAssistant.vue.backup
frontend/src/router/: index.js
frontend/src/stores/: dashboard.js
frontend/src/views/: Audit.jsx  Audit.vue.backup  Dashboard.jsx  Dashboard.vue.backup  Forecast.jsx  Forecast.vue.backup  Optimization.jsx  Optimization.vue.backup
src/ecogrid/: __init__.py  main.py
src/ecogrid/config/: __init__.py  settings.py
src/ecogrid/data/: __init__.py  cache_manager.py  etl_pipeline.py  taiwan_power_api.py  weather_api.py
src/ecogrid/llm/: __init__.py  agent.py  prompts.py  tools.py
src/ecogrid/models/: __init__.py  base_model.py  hybrid_engine.py  load_forecaster.py  renewable_forecaster.py
src/ecogrid/optimization/: __init__.py  tou_optimizer.py
src/ecogrid/utils/: __init__.py  helpers.py
