[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecogrid-audit-predict"
version = "1.0.0"
description = "綠電優化與用電審計預測系統 - Taiwan Green Energy Optimization & Power Audit Prediction System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "EcoGrid Team", email = "contact@ecogrid.tw"}
]
keywords = ["energy", "mlops", "time-series", "optimization", "taiwan", "tou", "renewable-energy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Data Processing
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "numpy>=1.24.0",
    
    # Web Scraping & API
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "aiohttp>=3.9.0",
    
    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "prophet>=1.1.0",
    
    # Deep Learning (PyTorch)
    "torch>=2.0.0",
    
    # Optimization
    "pulp>=2.7.0",
    "pyomo>=6.6.0",
    
    # LLM & RAG
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "tiktoken>=0.5.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "diskcache>=5.6.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
    
    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    
    # API Framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
ecogrid = "ecogrid.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
